--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,20 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM"],
-    "module": "ES2022",
-    "skipLibCheck": true,
+    "target": "ES2020",
+    "lib": ["DOM", "ES2020"],
     "jsx": "react-jsx",
+    "module": "ESNext",
     "moduleResolution": "Node",
-    "noEmit": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "allowJs": false,
     "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
-  }
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "types": ["node", "vite/client"]
+  },
+  "include": ["src"],
+  "exclude": ["dist"]
 }
