Move backend to vercel

--- a/backend/package.json
+++ b/backend/package.json
@@ -36,5 +36,9 @@
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
-  }
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "postinstall": "prisma generate"
 }
