--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/[[...route]].ts": { "runtime": "nodejs18.x" }
-  },
-  "routes": [{ "src": "/(.*)", "dest": "/api/[[...route]].ts" }]
+  "builds": [
+    { "src": "api/[[...route]].ts", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/api/[[...route]].ts" }
+  ]
 }
