--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "api/[[...route]].js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/api/[[...route]].js" }]
+  "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/api/index.js" }]
 }
