--- a/backend/package.json
+++ b/backend/package.json
@@ -6,19 +6,19 @@
     "dev": "node src/server.js",
     "start": "node src/server.js",
     "prisma:migrate": "prisma migrate deploy",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "build:prisma": "prisma generate"
   },
   "engines": {
     "node": "24.x"
   },
   "dependencies": {
-    "@prisma/client": "5.22.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
+    "@prisma/client": "5.22.0",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "prisma": "5.22.0"
