--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,6 +5,10 @@
       "includeFiles": "node_modules/.prisma/client/**"
     }
   },
-  "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/api/index.js" }]
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/api/index.js" }
+  ]
 }
