--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
   },
-  "engines": {
-    "node": "24.x"
-  },
+  "engines": { "node": "24.x" },
   "dependencies": {
     "express": "^4.19.0",
     "cors": "^2.8.5",
