--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://prpl-beige.vercel.app/
+VITE_API_URL=https://prpl-beige.vercel.app
 const api = import.meta.env.VITE_API_URL;
 
 export async function getHealth() {
