--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,15 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
   },
-  "engines": { "node": "24.x" },
+  "engines": { "node": "22.x" },
   "dependencies": {
-    "express": "^4.19.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "@prisma/client": "5.22.0",
     "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^4.19.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "@prisma/client": "5.22.0"
   },
   "devDependencies": {
     "prisma": "5.22.0"
