--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "functions": {
     "api/index.js": {
+      "runtime": "nodejs22.x",
       "includeFiles": "node_modules/.prisma/client/**"
     }
   },
