--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
   "functions": {
-    "api/index.js": {
-      "runtime": "nodejs22.x",
-      "includeFiles": "node_modules/.prisma/client/**"
+    "api/*.js": {
+      "runtime": "nodejs20.x",
+      "includeFiles": [
+        "node_modules/.prisma/client/**",
+        "prisma/**"
+      ]
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
+    { "src": "/(.*)", "dest": "api/index.js" }
   ]
 }
