--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   },
   "scripts": {
     "dev": "node src/server.js",
+    "build": "echo \"No build step - using committed dist/\"",
+    "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
   },
