--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     rootDir: backend
     buildCommand: npm ci && npx prisma generate && npm run build
     startCommand: npm run prisma:migrate && npm run start
-    healthCheckPath: /health
+    healthCheckPath: /api/health
     autoDeploy: true
     envVars:
       - key: DATABASE_URL
