changed api url

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://api-udccwbo4xa-uc.a.run.app
+VITE_API_URL=https://eduvillage-1011--eduvillage-0101.us-central1.hosted.app/
 const api = import.meta.env.VITE_API_URL;
 
 export async function getHealth() {
