Fix API integration and CORS

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,18 +1,1 @@
-VITE_API_URL=https://eduvillage-1011--eduvillage-0101.us-central1.hosted.app/
-const api = import.meta.env.VITE_API_URL;
-
-export async function getHealth() {
-  const res = await fetch(`${api}/health`);
-  if (!res.ok) throw new Error("Health failed");
-  return res.json();
-}
-
-const token = localStorage.getItem("token");
-
-export async function getQuizzes() {
-  const res = await fetch(`${api}/quizzes`, {
-    headers: { Authorization: `Bearer ${token}` },
-  });
-  if (!res.ok) throw new Error("Failed to fetch quizzes");
-  return res.json();
-}
+VITE_API_URL=https://eduvillage-1011--eduvillage-0101.us-central1.hosted.app
